Bug 390782 - Vertical position of combined fragment widget else part is moved to the vertical center after save/load cycle
Summary: Vertical position of combined fragment widget else part is moved to the verti...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.1 (KDE Applications 17.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-20 13:38 UTC by Ralf Habacker
Modified: 2018-02-20 15:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.3 (KDE Applications 17.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-20 13:38:05 UTC
How to reproduce:
1. start umbrello
2. add an alternate combined fragment widget to a sequence diagram
3. extend the widget vertical and move the else part to the bottom
4. save the file
4. open the file

What happens ?
The vertical line of the else part has been moved to the vertical center

What is expected ?
The vertical line of the else part should stay at the position it has been set to at step 3.
Comment 1 Ralf Habacker 2018-02-20 15:06:43 UTC
Git commit 7a39491306806cf9072cacac4d95686059dab591 by Ralf Habacker.
Committed on 20/02/2018 at 15:06.
Pushed by habacker into branch 'Applications/17.12'.

Fix 'Vertical position of combined fragment widget else part is moved to the vertical center after save/load cycle'

The location of a FloatingDashLineWidget instance should not be
reset when loading from an xmi file that the commit for bug 376804
did not cover.

Also on setting the y position of a FloatingDashLineWidget it is
required to have the minimum and maximum attributes already loaded.
FIXED-IN:2.24.3 (KDE Applications 17.12.3)

M  +2    -1    umbrello/umlwidgets/combinedfragmentwidget.cpp
M  +5    -4    umbrello/umlwidgets/floatingdashlinewidget.cpp

https://commits.kde.org/umbrello/7a39491306806cf9072cacac4d95686059dab591