Fix 'Vertical position of combined fragment widget else part is moved to the vertical center after save/load cycle'

The location of a FloatingDashLineWidget instance should not be
reset when loading from an xmi file that the commit for bug 376804
did not cover.

Also on setting the y position of a FloatingDashLineWidget it is
required to have the minimum and maximum attributes already loaded.

BUG:390782
FIXED-IN:2.24.3 (KDE Applications 17.12.3)